--- a/codechef/cpp/.vscode/settings.json
+++ b/codechef/cpp/.vscode/settings.json
@@ -3,6 +3,13 @@
         "*.html": "html",
         "*.ejs": "html",
         "iostream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "*.tcc": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "ratio": "cpp",
+        "cinttypes": "cpp",
+        "cstdlib": "cpp",
+        "numeric": "cpp"
     }
 }
