added new solutions

--- a/codechef/cpp/.vscode/settings.json
+++ b/codechef/cpp/.vscode/settings.json
@@ -10,6 +10,7 @@
         "ratio": "cpp",
         "cinttypes": "cpp",
         "cstdlib": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "random": "cpp"
     }
 }
