--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,6 @@
     "files.associations": {
         "*.html": "html",
         "*.ejs": "html",
-        "iostream": "cpp",
-        "ostream": "cpp",
-        "random": "cpp"
+        "iostream": "cpp"
     }
 }
