added more solutions

--- a/spoj/cpp/.vscode/settings.json
+++ b/spoj/cpp/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.html": "html",
         "*.ejs": "html",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "random": "cpp"
     }
 }
