added more solutions

--- a/spoj/cpp/.vscode/settings.json
+++ b/spoj/cpp/.vscode/settings.json
@@ -4,6 +4,7 @@
         "*.ejs": "html",
         "iostream": "cpp",
         "ostream": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "cmath": "cpp"
     }
 }
