--- a/spoj/cpp/.vscode/settings.json
+++ b/spoj/cpp/.vscode/settings.json
@@ -5,6 +5,15 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "random": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "system_error": "cpp"
     }
 }
