--- a/spoj/cpp/.vscode/settings.json
+++ b/spoj/cpp/.vscode/settings.json
@@ -14,6 +14,7 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "vector": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "complex": "cpp"
     }
 }
