--- a/codeforces/cpp/.vscode/settings.json
+++ b/codeforces/cpp/.vscode/settings.json
@@ -17,6 +17,7 @@
         "vector": "cpp",
         "initializer_list": "cpp",
         "valarray": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "cmath": "cpp"
     }
 }
