added more solutions

--- a/codechef/cpp/.vscode/settings.json
+++ b/codechef/cpp/.vscode/settings.json
@@ -11,6 +11,9 @@
         "cinttypes": "cpp",
         "cstdlib": "cpp",
         "numeric": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "valarray": "cpp",
+        "string": "cpp",
+        "string_view": "cpp"
     }
 }
