--- a/hackerearth/cpp/.vscode/settings.json
+++ b/hackerearth/cpp/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.html": "html",
         "*.ejs": "html",
         "iostream": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "ostream": "cpp"
     }
 }
