--- a/spoj/cpp/.vscode/settings.json
+++ b/spoj/cpp/.vscode/settings.json
@@ -15,6 +15,11 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "system_error": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     }
 }
