added more solutions

--- a/codeforces/cpp/.vscode/settings.json
+++ b/codeforces/cpp/.vscode/settings.json
@@ -18,6 +18,8 @@
         "initializer_list": "cpp",
         "valarray": "cpp",
         "*.tcc": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "chrono": "cpp",
+        "limits": "cpp"
     }
 }
