added more solutions

--- a/codeforces/cpp/.vscode/settings.json
+++ b/codeforces/cpp/.vscode/settings.json
@@ -20,6 +20,7 @@
         "*.tcc": "cpp",
         "cmath": "cpp",
         "chrono": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "iosfwd": "cpp"
     }
 }
