added  more solutions

--- a/codeforces/cpp/.vscode/settings.json
+++ b/codeforces/cpp/.vscode/settings.json
@@ -21,6 +21,7 @@
         "cmath": "cpp",
         "chrono": "cpp",
         "limits": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "numeric": "cpp"
     }
 }
