--- a/leetcode/cpp/.vscode/settings.json
+++ b/leetcode/cpp/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.html": "html",
         "*.ejs": "html",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "iostream": "cpp"
     }
 }
